overflow fixed

--- a/3-column-preview-card-component-main/sass/style.scss
+++ b/3-column-preview-card-component-main/sass/style.scss
@@ -87,7 +87,12 @@ body {
 	color: c.$VeryLightGray;
 }
 @media (max-width: 960px) {
+	body {
+		position: relative;
+	}
 	.container {
+		position: absolute;
+		top: 0;
 		flex-direction: column;
 		width: 400px;
 	}
